@@ -4,6 +4,10 @@ Changelog
 1.0b10 (unreleased)
 -------------------
 
+- Fixed "global name 'WrongCaptchaCode' is not defined" if norobots captcha,
+  but no other validation package is installed.
+  [naro]
+
 - Check if there is a 'pending' review state in the current workflow for 
   comments instead of just checking for the 'comment_review_workflow'. This 
   allows integrators to use a custom review workflow. This fixes 
